--- a/zh-CN/_layouts/default.html
+++ b/zh-CN/_layouts/default.html
@@ -24,7 +24,7 @@ chapters:
     <meta name="viewport" content="width=device-width">
     <title>CoffeeScript Cookbook &raquo; {{ page.title }}</title>
     <link type="image/x-icon" rel="shortcut icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
   </head>
   <body>
 
@@ -40,7 +40,7 @@ chapters:
 
         <footer class="footer content-block">
           <p>没找到你要的那盘菜？什么，整整少了一章？参考<a href="/contributing">贡献指南</a>自己加进来吧。或者把你的需求加到<a href="/wanted-recipes">想要的菜</a>中。</p>
-          <a href="/license"><img src="/images/cc_by_badge.png" /></a>
+          <a href="/license"><img src="./images/cc_by_badge.png" /></a>
         </footer>
 
       </section>
@@ -90,7 +90,7 @@ chapters:
 
     </aside>
 
-    <script type="text/javascript" src="/js/scripts.js"></script>
+    <script type="text/javascript" src="./js/scripts.js"></script>
 
  </body>
 </html>
