--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,12 +73,12 @@ chapters:
             {% capture url %}/chapters/{{ chapter | replace: ' ', '_' | downcase }}{% endcapture %}
             {% capture indexurl %}{{ url }}/index.html{% endcapture %}
             <li class="chapter">
-              <div class="sidebar-subtitle{% if page.url == indexurl %} page-active{% endif %}"><strong><a class="chapter-title" href="./{{ url }}/">{{ chapter }}</a></strong></div>
+              <div class="sidebar-subtitle{% if page.url == indexurl %} page-active{% endif %}"><strong><a class="chapter-title" href=".{{ url }}/">{{ chapter }}</a></strong></div>
               <ul class="pseudo-list recipes-list">
                 {% for site_page in site.pages %}
                   {% if site_page.url contains url %}
                     {% unless site_page.url == indexurl %}
-                      <li class="list-item recipe{% if page.url == site_page.url %} page-active{% endif %}"><a class="recipe-title" href="./{{ site_page.url}}">{{ site_page.title }}</a></li>
+                      <li class="list-item recipe{% if page.url == site_page.url %} page-active{% endif %}"><a class="recipe-title" href=".{{ site_page.url}}">{{ site_page.title }}</a></li>
                     {% endunless %}
                   {% endif %}
                 {% endfor %}
