--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -42,7 +42,7 @@ chapters:
         </article>
 
         <footer class="footer">
-          <p>Is this recipe wrong, incomplete, or non idiomatic? Help fix it by reading the <a href="../../contributing">Contributor's Guide</a>!</p>
+          <p>这道菜不对，不全，不是惯用法？读读<a href="../../contributing">贡献者指南</a>，帮忙完善吧。</p>
           <a href="/license"><img src="../../images/cc_by_badge.png" /></a>
         </footer>
       </section>
