--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@ chapters:
         <article class="content-block">{{ content }}</article>
 
         <footer class="footer content-block">
-          <p>没找到你要的那盘菜？什么，整整少了一章？参考<a href="/contributing">贡献指南</a>自己加进来吧。或者把你的需求加到<a href="./wanted-recipes">想要的菜</a>中。</p>
+          <p>没找到你要的那盘菜？什么，整整少了一章？参考<a href="./contributing">贡献指南</a>自己加进来吧。或者把你的需求加到<a href="./wanted-recipes">想要的菜</a>中。</p>
           <a href="/license"><img src="./images/cc_by_badge.png" /></a>
         </footer>
 
